// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-docgen-external-proptypes-handler /Users/ballen/code/react-docgen-external-proptypes-handler/tests/fixtures/component-imports-external-values-for-enum.js parses with default resolver/handlers and external handler for \${filepath} 1`] = `
Object {
  "composes": Array [
    "./api-external-values",
  ],
  "description": "",
  "displayName": "ComponentImportsExternalValuesForEnum",
  "methods": Array [],
  "props": Object {
    "api-external-values-enum": Object {
      "description": "Comment for api-external-values-enum.",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "'external-values-string'",
          },
          Object {
            "computed": false,
            "value": "42",
          },
          Object {
            "computed": false,
            "value": "false",
          },
        ],
      },
    },
    "api-external-values-enumList": Object {
      "description": "Comment for api-external-values-enumList.",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "'external-values-string'",
          },
          Object {
            "computed": false,
            "value": "42",
          },
          Object {
            "computed": false,
            "value": "false",
          },
          Object {
            "computed": false,
            "value": "4",
          },
        ],
      },
    },
    "api-external-values-notAnEnum": Object {
      "description": "Comment for api-external-values-notAnEnum.",
      "required": true,
      "type": Object {
        "name": "node",
      },
    },
  },
}
`;

exports[`react-docgen-external-proptypes-handler /Users/ballen/code/react-docgen-external-proptypes-handler/tests/fixtures/component-imports-external-values-for-enum.js parses with only external handlers 1`] = `
Object {
  "props": Object {
    "api-external-values-enum": Object {
      "description": "Comment for api-external-values-enum.",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "'external-values-string'",
          },
          Object {
            "computed": false,
            "value": "42",
          },
          Object {
            "computed": false,
            "value": "false",
          },
        ],
      },
    },
    "api-external-values-enumList": Object {
      "description": "Comment for api-external-values-enumList.",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "'external-values-string'",
          },
          Object {
            "computed": false,
            "value": "42",
          },
          Object {
            "computed": false,
            "value": "false",
          },
          Object {
            "computed": false,
            "value": "4",
          },
        ],
      },
    },
    "api-external-values-notAnEnum": Object {
      "description": "Comment for api-external-values-notAnEnum.",
      "required": true,
      "type": Object {
        "name": "node",
      },
    },
  },
}
`;
